--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.yakbangapp">
 
-    <!-- 🔎 Android 11+에서 카카오톡 설치 여부 확인을 위해 패키지 가시성 선언 -->
+    <!-- 🔎 Android 11+ 패키지 가시성: 카카오톡 설치 여부 확인 -->
     <queries>
         <package android:name="com.kakao.talk" />
     </queries>
 
-    <!-- 인터넷/카메라 권한 -->
+    <!-- 권한 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature
@@ -16,6 +16,7 @@
         android:required="true" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -27,56 +28,55 @@
         android:theme="@style/Theme.YakBangApp"
         tools:targetApi="31">
 
-        <!-- Kakao SDK App Key (이걸로 자동 초기화됨) -->
+        <!-- ✅ Kakao SDK 자동 초기화 (직접 KakaoSdk.init() 호출 중이면 이 meta-data는 제거) -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="b5179c6395c6c6dc6dbc677be8a8a4db" />
 
-        <!-- LoginActivity: 런처 + 카카오 OAuth 콜백 스킴 처리 -->
+        <!-- ✅ 런처 전용 LoginActivity (스킴/VIEW intent-filter 제거) -->
         <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.YakBangApp">
-
-            <!-- 앱 실행 진입 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
 
-            <!-- 카카오 로그인 콜백 (반드시 네이티브 앱 키 그대로 사용) -->
+        <!-- ✅ 카카오 인증 콜백 수신용 (SDK 내부 액티비티) -->
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <!-- 예시: kakaob5179c6395c6c6dc6dbc677be8a8a4db://oauth -->
+                <!-- 네이티브 앱 키를 소문자 그대로 scheme에 붙임 -->
+                <!-- 예: kakaob5179c6395c6c6dc6dbc677be8a8a4db://oauth -->
                 <data
                     android:scheme="kakaob5179c6395c6c6dc6dbc677be8a8a4db"
                     android:host="oauth" />
             </intent-filter>
         </activity>
 
-        <!-- 검색 선택 화면 (로그인 성공 후 진입) -->
+        <!-- 로그인 후 진입 화면들 -->
         <activity
             android:name=".SearchOptionActivity"
             android:exported="true" />
 
-        <!-- 텍스트 검색용 메인화면 -->
         <activity
             android:name=".MainActivity"
             android:exported="true" />
 
-        <!-- 사진 촬영 검색용 화면 -->
         <activity
             android:name=".CameraSearchActivity"
             android:exported="true" />
 
-        <!-- 복약 중인 알약 (선택사항) -->
         <activity
             android:name=".MyMedsActivity"
             android:exported="true" />
 
-        <!-- OCR 결과 화면 -->
         <activity
             android:name=".RecognitionResultActivity"
             android:exported="true" />
