마이페이지 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:exported="true" />
 
         <activity
-            android:name=".MyMedsActivity"
+            android:name=".ui.mypage.MyPageActivity"
             android:exported="true" />
 
         <activity
