RecogntionResultActivity 페이지 사진 촬영시 상세페이지로 넘어가도록 수정완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- 🔎 Android 11+ 패키지 가시성: 카카오톡 설치 여부 확인 -->
+    <!-- Android 11+ 패키지 가시성 (카카오톡 설치 여부 확인) -->
     <queries>
         <package android:name="com.kakao.talk" />
     </queries>
@@ -27,13 +27,12 @@
         android:theme="@style/Theme.YakBangApp"
         tools:targetApi="31">
 
-        <!-- ✅ Kakao SDK 앱키: (직접 KakaoSdk.init() 호출 중이어도 유지 가능) -->
-        <!-- 보안상 실제 배포 시에는 strings.xml 로 분리 권장 -->
+        <!-- Kakao SDK 앱키 -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="b5179c6395c6c6dc6dbc677be8a8a4db" />
 
-        <!-- ✅ 런처: 로그인 액티비티 (패키지 경로는 실제 클래스에 맞춰 조정) -->
+        <!-- 런처: 로그인 액티비티 -->
         <activity
             android:name=".ui.auth.LoginActivity"
             android:exported="true"
@@ -44,7 +43,7 @@
             </intent-filter>
         </activity>
 
-        <!-- ✅ 카카오 인증 콜백 (SDK 내부) -->
+        <!-- 카카오 인증 콜백 -->
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
@@ -52,15 +51,13 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <!-- 네이티브 앱 키를 그대로 scheme에 붙임 (모두 소문자) -->
-                <!-- 예: kakaob5179c6395c6c6dc6dbc677be8a8a4db://oauth -->
                 <data
                     android:scheme="kakaob5179c6395c6c6dc6dbc677be8a8a4db"
                     android:host="oauth" />
             </intent-filter>
         </activity>
 
-        <!-- ✅ 로그인 이후 들어가는 화면들 -->
+        <!-- 앱 화면들 -->
         <activity
             android:name=".SearchOptionActivity"
             android:exported="true" />
@@ -77,7 +74,12 @@
             android:name=".RecognitionResultActivity"
             android:exported="true" />
 
-        <!-- 📷 FileProvider (카메라 촬영 결과 파일 공유용) -->
+        <!-- ✅ 누락되어 있던 상세 호스트 액티비티 등록 -->
+        <activity
+            android:name=".ui.detail.DetailHostActivity"
+            android:exported="false" />
+
+        <!-- FileProvider (카메라 촬영 결과 파일 공유용) -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
